Fix: z-index stacking Floating UI

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -3,4 +3,10 @@
 @import './scss/common';
 
 @import './scss/custom/react-toggle-dark-mode';
-@import './scss/custom/nav-link-hover-effect'
+@import './scss/custom/nav-link-hover-effect';
+
+div[data-floating-ui-portal] {
+  & > div {
+    z-index: 1000;
+  }
+}
